modules/noosphere/taghmata/nixidy/manifests/prod/alloy/Namespace-alloy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: alloy
