modules/noosphere/taghmata/nixidy/manifests/prod/alloy/Deployment-alloy-alloy-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: alloy-operator
    app.kubernetes.io/version: 1.10.0
    helm.sh/chart: alloy-operator-0.5.11
  name: alloy-alloy-operator
  namespace: alloy
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: alloy
      app.kubernetes.io/name: alloy-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: alloy
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: alloy-operator
        app.kubernetes.io/version: 1.10.0
        helm.sh/chart: alloy-operator-0.5.11
    spec:
      containers:
        - args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=:8082
            - --leader-elect
            - --leader-election-id=alloy-alloy-operator
          image: ghcr.io/grafana/alloy-operator:1.10.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: alloy-operator
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
            - containerPort: 8082
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits: {}
            requests: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
      serviceAccountName: alloy-alloy-operator
